--- a/eshop-admin/src/main/resources/templates/fragments/navigation.html
+++ b/eshop-admin/src/main/resources/templates/fragments/navigation.html
@@ -5,7 +5,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navigation">
     <a class="navbar-brand" href="#">EShop</a>
 
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+            class="navbar-toggler"
             data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
