--- a/eshop-admin/src/main/resources/templates/fragments/navigation.html
+++ b/eshop-admin/src/main/resources/templates/fragments/navigation.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navigation">
-    <a class="navbar-brand" href="#">EShop</a>
+    <a class="navbar-brand" href="/">EShop</a>
 
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
             class="navbar-toggler"
