--- a/eshop-admin/src/main/resources/templates/fragments/navigation.html
+++ b/eshop-admin/src/main/resources/templates/fragments/navigation.html
@@ -22,6 +22,9 @@
             <li class="nav-item active">
                 <a class="nav-link" th:href="@{/categories}">Categories</a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/brands}">Brands</a>
+            </li>
         </ul>
 
         <form class="form-inline my-2 my-lg-0"
