--- a/eshop-admin/src/main/resources/templates/product_info.html
+++ b/eshop-admin/src/main/resources/templates/product_info.html
@@ -43,6 +43,18 @@
                         </div>
                     </ul>
                 </div>
+                <div>
+                    <label>Brand</label>
+                    <ul class="checkbox-list">
+                        <div th:each="brand : ${brands}">
+                            <input id="brands" multiple required th:field="*{brand}"
+                                   th:selected="${product.brand == null}"
+                                   th:text="${brand.title}"
+                                   th:value="${brand.id} + ';' + ${brand.title}"
+                                   type="radio"/>
+                        </div>
+                    </ul>
+                </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
         </div>
