--- a/eshop-admin/src/main/resources/templates/products.html
+++ b/eshop-admin/src/main/resources/templates/products.html
@@ -36,7 +36,8 @@
                     <th scope="col" th:replace="fragments/sort_header :: sort_products('Id', 'id')"></th>
                     <th scope="col" th:replace="fragments/sort_header :: sort_products('Title', 'title')"></th>
                     <th scope="col" th:replace="fragments/sort_header :: sort_products('Cost', 'cost')"></th>
-                    <th scope="col">Category</th>
+                    <th scope="col" th:replace="fragments/sort_header :: sort_categories('Name', 'name')"></th>
+                    <th scope="col" th:replace="fragments/sort_header :: sort_brands('Title', 'title')"></th>
                     <th scope="col">Actions</th>
                 </tr>
                 </thead>
@@ -45,7 +46,8 @@
                     <th scope="row" th:text="${product.id}">1</th>
                     <td th:text="${product.title}">Product</td>
                     <td th:text="${product.price}">$100</td>
-                    <td th:text="${product.category.name}">category</td>
+                    <td th:text="${product.category.name}">Category</td>
+                    <td th:text="${product.brand.title}">Brand</td>
                     <td>
                         <a class="btn btn-success" th:href="@{/products/{id}(id = ${product.id})}"><i
                                 class="fas fa-edit"></i></a>
@@ -55,7 +57,7 @@
                     </td>
                 </tr>
                 <tr th:unless="${products.hasContent()}">
-                    <td colspan="4">No data</td>
+                    <td colspan="6">No data</td>
                 </tr>
                 </tbody>
             </table>
