--- a/eshop-admin/src/main/resources/templates/product_info.html
+++ b/eshop-admin/src/main/resources/templates/product_info.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form method="post" th:action="@{/products}" th:object="${product}">
+            <form method="post" th:action="@{/products}" th:object="${product}" enctype="multipart/form-data">
                 <input id="id" th:field="*{id}" type="hidden">
                 <div class="form-group">
                     <label>Name</label>
@@ -54,6 +54,11 @@
                                    type="radio"/>
                         </div>
                     </ul>
+                </div>
+                <div class="form-group">
+                    <label for="newPictures">Product image</label>
+                    <input th:field="*{newPictures}" type="file" class="form-control" id="newPictures"
+                           placeholder="Upload new product picture" multiple>
                 </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
