--- a/eshop-admin/src/main/resources/templates/products.html
+++ b/eshop-admin/src/main/resources/templates/products.html
@@ -36,8 +36,9 @@
                     <th scope="col" th:replace="fragments/sort_header :: sort_products('Id', 'id')"></th>
                     <th scope="col" th:replace="fragments/sort_header :: sort_products('Title', 'title')"></th>
                     <th scope="col" th:replace="fragments/sort_header :: sort_products('Cost', 'cost')"></th>
-                    <th scope="col" th:replace="fragments/sort_header :: sort_categories('Name', 'name')"></th>
-                    <th scope="col" th:replace="fragments/sort_header :: sort_brands('Title', 'title')"></th>
+                    <th scope="col" th:replace="fragments/sort_header :: sort_categories('Category', 'name')"></th>
+                    <th scope="col" th:replace="fragments/sort_header :: sort_brands('Brand', 'title')"></th>
+                    <th scope="col">Photo</th>
                     <th scope="col">Actions</th>
                 </tr>
                 </thead>
@@ -48,6 +49,9 @@
                     <td th:text="${product.price}">$100</td>
                     <td th:text="${product.category.name}">Category</td>
                     <td th:text="${product.brand.title}">Brand</td>
+                    <td th:each="pic : ${product.pictures}">
+                        <img th:src="@{/picture/{id}(id = ${pic})}" height="100px" width="100px" alt="Some image"/>
+                    </td>
                     <td>
                         <a class="btn btn-success" th:href="@{/products/{id}(id = ${product.id})}"><i
                                 class="fas fa-edit"></i></a>
@@ -57,7 +61,7 @@
                     </td>
                 </tr>
                 <tr th:unless="${products.hasContent()}">
-                    <td colspan="6">No data</td>
+                    <td colspan="7">No data</td>
                 </tr>
                 </tbody>
             </table>
