--- a/eshop-frontend-app/src/app/components/product-gallery/product-gallery.component.html
+++ b/eshop-frontend-app/src/app/components/product-gallery/product-gallery.component.html
@@ -3,7 +3,7 @@
   <div *ngFor="let product of products" class="col">
     <div class="card">
       <div *ngIf="product.pictures.length > 0">
-        <img alt="Card image cap" class="card-img-top" src="/api/v1/pictures/{{product.pictures[0]}}" width="100" height="200">
+        <img alt="Card image cap" class="card-img-top" src="/api/v1/picture/{{product.pictures[0]}}" width="100" height="200">
       </div>
       <div class="card-body">
         <h5 class="card-title">{{product.title}}</h5>
