--- a/eshop-frontend-app/src/app/components/pagination/pagination.component.html
+++ b/eshop-frontend-app/src/app/components/pagination/pagination.component.html
@@ -1,14 +1,14 @@
 <div class="col-md-9 col-xs-12 mt-3">
-  <nav aria-label="..." *ngIf="!page?.empty">
+  <nav *ngIf="!page?.empty" aria-label="...">
     <ul class="pagination">
-      <li class="page-item" [class.disabled]="page?.first">
-        <a aria-disabled="true" class="page-link" (click)="goToPage(pageNumber - 1)" tabindex="-1">Previous</a>
+      <li [class.disabled]="page?.first" class="page-item">
+        <a (click)="goToPage(pageNumber - 1)" aria-disabled="true" class="page-link" tabindex="-1">Previous</a>
       </li>
-      <li class="page-item" *ngFor="let num of numbers" [class.active]="pageNumber == num + 1">
-        <a class="page-link" (click)="goToPage(num + 1)">{{num + 1}}</a>
+      <li *ngFor="let num of numbers" [class.active]="pageNumber == num + 1" class="page-item">
+        <a (click)="goToPage(num + 1)" class="page-link">{{num + 1}}</a>
       </li>
-      <li class="page-item" [class.disabled]="page?.last">
-        <a class="page-link"(click)="goToPage(pageNumber + 1)">Next</a>
+      <li [class.disabled]="page?.last" class="page-item">
+        <a (click)="goToPage(pageNumber + 1)" class="page-link">Next</a>
       </li>
     </ul>
   </nav>
