--- a/eshop-frontend-app/src/app/pages/product-gallery-page/product-gallery-page.component.html
+++ b/eshop-frontend-app/src/app/pages/product-gallery-page/product-gallery-page.component.html
@@ -1,5 +1,5 @@
 <div class="row py-2">
-  <div>
+  <div class="col-md-3 col-xs-12">
     <app-product-filter (filterApplied)="filterApplied($event)"></app-product-filter>
   </div>
 
