--- a/eshop-frontend-app/src/app/components/nav-bar/nav-bar.component.html
+++ b/eshop-frontend-app/src/app/components/nav-bar/nav-bar.component.html
@@ -9,28 +9,27 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a aria-current="page" class="nav-link active" href="#">Home</a>
+          <a [attr.aria-current]="isProductGalleryPage ? 'page' : undefined"
+             [class.active]="isProductGalleryPage"
+             class="nav-link"
+             routerLink="/product">Product Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a [attr.aria-current]="isCartPage ? 'page' : undefined"
+             [class.active]="isCartPage"
+             class="nav-link"
+             routerLink="/cart">Cart</a>
         </li>
-        <li class="nav-item dropdown">
-          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
-             id="navbarDropdown" role="button">
-            Dropdown
-          </a>
-          <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        <li class="nav-item">
+          <a [attr.aria-current]="isOrderPage ? 'page' : undefined"
+             [class.active]="isOrderPage"
+             class="nav-link"
+             routerLink="/order">Orders</a>
         </li>
       </ul>
       <form class="d-flex">
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button (click)="logout()" *ngIf="auth.isAuthenticated()" class="btn btn-outline-success">Logout</button>
+        <button *ngIf="!auth.isAuthenticated()" class="btn btn-outline-success" routerLink="/login">Login</button>
       </form>
     </div>
   </div>
