--- a/eshop-frontend-app/src/app/components/product-gallery/product-gallery.component.html
+++ b/eshop-frontend-app/src/app/components/product-gallery/product-gallery.component.html
@@ -11,7 +11,7 @@
         <p class="card-text">{{product.description}}</p>
         <p class="card-text">Price: {{product.price}}</p>
         <a class="btn btn-primary" routerLink="/products/{{product.id}}">View</a>
-        <a class="btn btn-primary" href="#">Add to card</a>
+        <a (click)="addToCart(product.id)" class="btn btn-primary">Add to card</a>
       </div>
     </div>
   </div>
