--- a/eshop-frontend-app/src/app/pages/cart-page/cart-page.component.html
+++ b/eshop-frontend-app/src/app/pages/cart-page/cart-page.component.html
@@ -17,18 +17,21 @@
         <th scope="row">1</th>
         <td>{{lineItem.productDto.title}}</td>
         <td>
-          <input class="form-control w-25" type="number" value="{{lineItem.qty}}"/>
+          <input #newQty class="form-control w-25" min=1 name="newQty" oninput="validity.valid||(value=1);"
+                 type="number"
+                 value="{{lineItem.qty}}"/>
         </td>
         <td>{{lineItem.itemTotal}}</td>
         <td>
-          <a class="btn btn-success me-2" href="#"><i class="fas fa-check-circle"></i></a>
-          <a class="btn btn-danger" href="#"><i class="far fa-trash-alt"></i></a>
+          <a (click)="recalculationOfCost(lineItem.productId, newQty.value)" class="btn btn-success me-2"><i
+            class="fas fa-check-circle"></i></a>
+          <a (click)="deleteItem(lineItem.productId)" class="btn btn-danger"><i class="far fa-trash-alt"></i></a>
         </td>
       </tr>
 
       </tbody>
     </table>
-    <button class="btn btn-danger">Clear Cart</button>
+    <button (click)="clearCart()" class="btn btn-danger">Clear Cart</button>
   </div>
 
   <div class="col-md-3 col-xs-12">
