--- a/eshop-frontend-app/src/app/pages/register-page/register-page.component.html
+++ b/eshop-frontend-app/src/app/pages/register-page/register-page.component.html
@@ -3,41 +3,41 @@
 
     <form>
       <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username" name="username">
+        <label class="form-label" for="username">Username</label>
+        <input class="form-control" id="username" name="username" type="text">
       </div>
 
       <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password">
+        <label class="form-label" for="password">Password</label>
+        <input class="form-control" id="password" name="password" type="password">
       </div>
 
       <div class="mb-3">
-        <label for="matchingPassword" class="form-label">Repeat password</label>
-        <input type="password" class="form-control" id="matchingPassword" name="matchingPassword">
+        <label class="form-label" for="matchingPassword">Repeat password</label>
+        <input class="form-control" id="matchingPassword" name="matchingPassword" type="password">
       </div>
 
       <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="email">
+        <label class="form-label" for="email">Email</label>
+        <input class="form-control" id="email" name="email" type="email">
       </div>
 
       <div class="mb-3">
-        <label for="firstName" class="form-label">First name</label>
-        <input type="text" class="form-control" id="firstName" name="firstName">
+        <label class="form-label" for="firstName">First name</label>
+        <input class="form-control" id="firstName" name="firstName" type="text">
       </div>
 
       <div class="mb-3">
-        <label for="lastName" class="form-label">Last name</label>
-        <input type="text" class="form-control" id="lastName" name="lastName">
+        <label class="form-label" for="lastName">Last name</label>
+        <input class="form-control" id="lastName" name="lastName" type="text">
       </div>
 
       <div class="mb-3">
-        <label for="birthday" class="form-label">Last name</label>
-        <input type="date" class="form-control" id="birthday" name="birthday">
+        <label class="form-label" for="birthday">Last name</label>
+        <input class="form-control" id="birthday" name="birthday" type="date">
       </div>
 
-      <button type="submit" class="btn btn-primary me-3">Register</button>
+      <button class="btn btn-primary me-3" type="submit">Register</button>
 
     </form>
 
