--- a/eshop-frontend-app/src/app/pages/product-info-page/product-info-page.component.html
+++ b/eshop-frontend-app/src/app/pages/product-info-page/product-info-page.component.html
@@ -1,34 +1,34 @@
 <div class="row py-2">
   <div class="col-md-6 col-xs-12">
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+        <button aria-current="true" aria-label="Slide 1" class="active"
+                data-bs-slide-to="0" data-bs-target="#carouselExampleIndicators" type="button"></button>
+        <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleIndicators"
+                type="button"></button>
+        <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleIndicators"
+                type="button"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://picsum.photos/400/400?random=1" class="d-block w-100" alt="...">
+          <img alt="..." class="d-block w-100" src="https://picsum.photos/400/400?random=1">
         </div>
         <div class="carousel-item">
-          <img src="https://picsum.photos/400/400?random=2" class="d-block w-100" alt="...">
+          <img alt="..." class="d-block w-100" src="https://picsum.photos/400/400?random=2">
         </div>
         <div class="carousel-item">
-          <img src="https://picsum.photos/400/400?random=3" class="d-block w-100" alt="...">
+          <img alt="..." class="d-block w-100" src="https://picsum.photos/400/400?random=3">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleIndicators"
+              type="button">
+        <span aria-hidden="true" class="carousel-control-prev-icon"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleIndicators"
+              type="button">
+        <span aria-hidden="true" class="carousel-control-next-icon"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
@@ -46,10 +46,10 @@
       publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     <form class="row">
       <div class="col-auto">
-        <button type="submit" class="btn btn-primary">Add to card</button>
+        <button class="btn btn-primary" type="submit">Add to card</button>
       </div>
       <div class="col-auto">
-        <input type="number" class="form-control" value="0"/>
+        <input class="form-control" type="number" value="0"/>
       </div>
     </form>
 
