--- a/eshop-admin/src/main/resources/templates/fragments/navigation.html
+++ b/eshop-admin/src/main/resources/templates/fragments/navigation.html
@@ -30,7 +30,7 @@
         <form class="form-inline my-2 my-lg-0"
               sec:authorize="isAuthenticated()" th:action="@{/logout}"
               th:method="post">
-            <button id="btn-logout" class="btn btn-outline-success my-2 my-sm-0">
+            <button class="btn btn-outline-success my-2 my-sm-0" id="btn-logout">
                 Logout&nbsp;<span id="user" sec:authentication="principal.username"></span>
             </button>
         </form>
