--- a/eshop-admin/src/main/resources/templates/category_info.html
+++ b/eshop-admin/src/main/resources/templates/category_info.html
@@ -19,7 +19,7 @@
                            type="text">
                     <p class="text-danger" th:errors="*{name}" th:if="${#fields.hasErrors('name')}"></p>
                 </div>
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <button class="btn btn-primary" id="submit" type="submit">Submit</button>
             </form>
         </div>
     </div>
