--- a/eshop-admin/src/main/resources/templates/login_page.html
+++ b/eshop-admin/src/main/resources/templates/login_page.html
@@ -23,7 +23,7 @@
                     <input class="form-control" id="password" name="password" placeholder="Enter password"
                            type="password">
                 </div>
-                <button id="btn-login" class="btn btn-primary" type="submit">Login</button>
+                <button class="btn btn-primary" id="btn-login" type="submit">Login</button>
                 <a class="px-3" href="/new_guest">Register</a>
             </form>
         </div>
